# Splat

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  index.md
.github/workflows/: ci.yml
backend/: Dockerfile  index.md  pom.xml  pyproject.toml
backend/app/: index.md  main.py
backend/app/api/: deps.py  index.md  router.py
backend/app/api/v1/: auth.py  index.md  orders.py  users.py
backend/app/core/: config.py  index.md  security.py
backend/app/db/: base.py  index.md
backend/app/models/: index.md  order.py  user.py
backend/app/schemas/: index.md  order.py  user.py
backend/app/services/: auth.py  claude.py  index.md  s3.py
backend/src/main/kotlin/com/merilo/: MeriloApplication.kt
backend/src/main/kotlin/com/merilo/api/: AuthController.kt  OrderController.kt  UserController.kt
backend/src/main/kotlin/com/merilo/config/: JwtAuthFilter.kt  JwtService.kt  SecurityConfig.kt
backend/src/main/kotlin/com/merilo/dto/: AddParticipantRequest.kt  AuthRequest.kt  AuthResponse.kt  OrderResponse.kt  (+6 more)
backend/src/main/resources/: application.yaml
backend/src/main/resources/static/: index.html
backend/tests/: conftest.py  index.md  test_auth.py  test_orders.py  test_users.py
bot/: Dockerfile  README.md  index.md  pyproject.toml
bot/app/: config.py  index.md  main.py  storage.py
bot/app/client/: api.py  base.py  index.md  mock.py
bot/app/handlers/: index.md  notifications.py  order.py  start.py
bot/app/utils/: index.md  initdata.py
docs/: api.md  architecture.md  development.md  index.md  models.md  notifications.md
(+20 files in other folders)
